--- a/docs/00.引导页/00.更新集合.md
+++ b/docs/00.引导页/00.更新集合.md
@@ -6,7 +6,13 @@ sidebar: auto
 article: false
 ---
 
-## 🎖集合页表
+## 🎖软件列表
+
+| 软件名称         | 下载地址                                            | 一句话简介                    | 软件文档                                                     |
+| ---------------- | --------------------------------------------------- | ----------------------------- | ------------------------------------------------------------ |
+| Easyget          | [立即下载](https://pandown.lanzout.com/iB4ISxjvzxg) | 一款简易抓包工具              | [123](/pages/update/)<a href="pages/update/" target="_blank">链接文本</a> |
+| 快站短地址生成器 | https://pandown.lanzout.com/iXxqqtdxy7g             | [title](www.baidu.com?_blank) |                                                              |
+| 抖音OBS小助手    | https://pandown.lanzout.com/i2ztN07xajxi            |                               |                                                              |
 
 ::: cardList 2
 ```yaml
