deploy, heads/master-0-gc21f682

--- a/docs/00.引导页/00.更新集合.md
+++ b/docs/00.引导页/00.更新集合.md
@@ -8,13 +8,16 @@ article: false
 
 ## 🎖软件列表
 
-| 软件名称         | 下载地址                                            | 一句话简介                    | 软件文档                                                     |
-| ---------------- | --------------------------------------------------- | ----------------------------- | ------------------------------------------------------------ |
-| Easyget          | [立即下载](https://pandown.lanzout.com/iB4ISxjvzxg) | 一款简易抓包工具              | [123](/pages/update/)<a href="pages/update/" target="_blank">链接文本</a> |
-| 快站短地址生成器 | https://pandown.lanzout.com/iXxqqtdxy7g             | [title](www.baidu.com?_blank) |                                                              |
-| 抖音OBS小助手    | https://pandown.lanzout.com/i2ztN07xajxi            |                               |                                                              |
+|     软件名称     | 下载地址                                             |  一句话简介  |              软件文档              |
+| :--------------: | :--------------------------------------------------- | :----------: | :--------------------------------: |
+|     Easyget      | [立即下载](https://pandown.lanzout.com/iB4ISxjvzxg)  | 一款简易抓包 | [Easyget软件文档](/pages/easyget/) |
+| 快站短地址生成器 | [立即下载                                            |              |                                    |
+|  抖音OBS小助手   | [立即下载](https://pandown.lanzout.com/i2ztN07xajxi) |              |                                    |
+
+![](https://cdn.staticaly.com/gh/xiaoh2018/imgurl@master/picgo/1655865010594.jpg)
 
 ::: cardList 2
+
 ```yaml
 # - name: OpenHarmony
 #   desc: 开放原子开源基金会
