--- a/docs/00.引导页/00.更新集合.md
+++ b/docs/00.引导页/00.更新集合.md
@@ -14,7 +14,7 @@ article: false
 | 快站短地址生成器 | [立即下载                                            |              |                                    |
 |  抖音OBS小助手   | [立即下载](https://pandown.lanzout.com/i2ztN07xajxi) |              |                                    |
 
-![](https://cdn.staticaly.com/gh/xiaoh2018/imgurl@master/picgo/1655865010594.jpg)
+![](../.vuepress/public/picup/1655947600652.jpg)
 
 ::: cardList 2
 
