--- a/docs/00.引导页/00.更新集合.md
+++ b/docs/00.引导页/00.更新集合.md
@@ -14,7 +14,11 @@ article: false
 | 快站短地址生成器 | [立即下载                                            |              |                                    |
 |  抖音OBS小助手   | [立即下载](https://pandown.lanzout.com/i2ztN07xajxi) |              |                                    |
 
-![](../.vuepress/public/img/picup/1655947645194.jpg)
+![](C:/Users/Administrator/Desktop/banana/1655947645194.jpg)
+
+| ![](../.vuepress/public/img/picup/1655947645194-16582201123535.jpg) | ![](../.vuepress/public/img/picup/1655947645194-16582201228527.jpg) |
+| ------------------------------------------------------------ | ------------------------------------------------------------ |
+|                                                              |                                                              |
 
 ::: cardList 2
 
