--- a/docs/00.引导页/02.支持作者/02.支持作者.md
+++ b/docs/00.引导页/02.支持作者/02.支持作者.md
@@ -1,11 +1,12 @@
 ---
 title:  '支持这个项目'
 date: 2020-05-12 15:09:57
-permalink: /pages/1b12ed
-sidebar: false
+permalink: /pages/about
 article: false
 ---
-### 用爱发电
+
+## 用爱发电
+
 如果您正在使用这个项目并感觉良好，或者是想支持我继续开发，您可以通过如下`任意`方式支持我：
 
 1. Star并分享 [vuepress-theme-vdoing](https://github.com/xugaoyi/vuepress-theme-vdoing) :rocket:
@@ -14,13 +15,14 @@ article: false
 
 谢谢！ :heart:
 
-| 微信赞赏 | 微信 | 支付宝 |
-| :---: | :---: | :---: |
-| <img :src="$withBase('/img/qrcode/wxzs.jpg')" alt="赞赏码" width=180> | <img :src="$withBase('/img/qrcode/wxzz.jpg')" alt="Wechat QRcode" width=180>| <img :src="$withBase('/img/qrcode/zfbzz.jpg')" alt="Alipay QRcode" width=180> |
+|                           微信赞赏                           |                             微信                             |                            支付宝                            |
+| :----------------------------------------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
+| <img :src="$withBase('/img/qrcode/wxzs.jpg')" alt="赞赏码" width=180> | <img :src="$withBase('/img/qrcode/wxzz.jpg')" alt="Wechat QRcode" width=180> | <img :src="$withBase('/img/qrcode/zfbzz.jpg')" alt="Alipay QRcode" width=180> |
 
-### 成为赞助商
+##成为赞助商
 
 成为赞助商，即可将您的品牌LOGO及标语同时展示在：
+
 - GitHub仓库主页顶部
 - 官网首页顶部
 - 官网所有文档页左侧边栏顶部
@@ -30,7 +32,9 @@ article: false
 [联系方式](https://xugaoyi.com/about/#%E8%81%94%E7%B3%BB)
 
 ## 公众号
+
 `有趣研究社`是本人对各种有趣的、好玩的、沙雕的创意和想法以在线小网站或者文章的形式表达出来，比如：
+
 - [小霸王游戏机](https://game.xugaoyi.com)
 - [爱国头像生成器](https://avatar.xugaoyi.com/)
 - [到账语音生成器](https://zfb.xugaoyi.com/)
@@ -40,4 +44,5 @@ article: false
 <img :src="$withBase('/img/qrcode/gzh.jpg')"  style="width:180px;" />
 
 ## 致谢
+
 感谢给予支持的朋友，您的支持是我前进的动力 🎉
