--- a/docs/00.引导页/01.项目导航/01.项目导航.md
+++ b/docs/00.引导页/01.项目导航/01.项目导航.md
@@ -60,14 +60,14 @@ title: 项目导航
 
 :::
 
-| 软件资源平台推荐 |          平台地址           |
-| :--------------: | :-------------------------: |
-|   吾爱破解论坛   | [点击查看](/pages/easyget/) |
-|       B站        | [点击查看](/pages/easyget/) |
+| 软件资源平台推荐 |                    平台地址                     |
+| :--------------: | :---------------------------------------------: |
+|   吾爱破解论坛   |       [点击查看](http://www.52pojie.com)        |
+|       B站        | [点击查看](https://space.bilibili.com/43603451) |
 
 ## 🐱‍🚀羊毛资讯
 
-::: tip
+::: tip 公众号
 
 不定时更新|喜欢的话也可以关注公众号[【互联网线报站】](https://jingyan.baidu.com/)
 
@@ -79,7 +79,7 @@ title: 项目导航
 
 ## 🐱‍🚀学习经验&教程
 
-::: tip
+::: tip 
 
 日常遇到问题的一个小记录本，分享出来少走弯路。
 
