--- a/docs/00.引导页/02.支持作者/02.支持作者.md
+++ b/docs/00.引导页/02.支持作者/02.支持作者.md
@@ -9,35 +9,19 @@ article: false
 
 如果您正在使用这个项目并感觉良好，或者是想支持我继续开发，您可以通过如下`任意`方式支持我：
 
-1. Star并分享 [vuepress-theme-vdoing](https://github.com/xugaoyi/vuepress-theme-vdoing) :rocket:
-2. 保留主题 footer(页脚) 的主题链接 :D
-3. 通过以下二维码 一次性捐款，打赏作者一杯茶。:tea:
-
 谢谢！ :heart:
 
-|                           微信赞赏                           |                             微信                             |                            支付宝                            |
-| :----------------------------------------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
-| <img :src="$withBase('/img/qrcode/wxzs.jpg')" alt="赞赏码" width=180> | <img :src="$withBase('/img/qrcode/wxzz.jpg')" alt="Wechat QRcode" width=180> | <img :src="$withBase('/img/qrcode/zfbzz.jpg')" alt="Alipay QRcode" width=180> |
+|                           微信赞赏                           |                             微信                             |
+| :----------------------------------------------------------: | :----------------------------------------------------------: |
+| <img :src="$withBase('/img/qrcode/wxzs.jpg')" alt="赞赏码" width=180> | <img :src="$withBase('/img/qrcode/wxzz.jpg')" alt="Wechat QRcode" width=180> |
 
-##成为赞助商
-
-成为赞助商，即可将您的品牌LOGO及标语同时展示在：
-
-- GitHub仓库主页顶部
-- 官网首页顶部
-- 官网所有文档页左侧边栏顶部
-
-**主题官网平均每月约8w+浏览量 + GitHub仓库每月约1w+浏览量**
-
-[联系方式](https://xugaoyi.com/about/#%E8%81%94%E7%B3%BB)
+> 联系方式：微信wechina008
 
 ## 公众号
 
-`有趣研究社`是本人对各种有趣的、好玩的、沙雕的创意和想法以在线小网站或者文章的形式表达出来，比如：
+[互联网线报站](https://mp.weixin.qq.com/mp/profile_ext?action=home&__biz=MzIzMjE3OTk5Mw==)是本人对各种有趣的、好玩的、沙雕的创意和想法以在线小网站或者文章的形式表达出来，比如：
 
-- [小霸王游戏机](https://game.xugaoyi.com)
-- [爱国头像生成器](https://avatar.xugaoyi.com/)
-- [到账语音生成器](https://zfb.xugaoyi.com/)
+- 待添加
 
 还有更多好玩的等你去探索吧~
 
