deploy, heads/master-0-gf8d1a14

--- a/docs/00.引导页/01.项目导航/01.项目导航.md
+++ b/docs/00.引导页/01.项目导航/01.项目导航.md
@@ -3,6 +3,11 @@ date: 2020-07-19 00:45:57
 permalink: /pages/update
 article: false
 title: 项目导航
+categories: 
+  - 引导页
+  - 项目导航
+tags: 
+  - 
 ---
 
 ## 💋原创软件
@@ -13,22 +18,19 @@ title: 项目导航
 
 :::
 
-### ✅免费软件<Badge text="免费"/>
+### ✅软件列表
 
-|        软件名称         |          使用教程           |
-| :---------------------: | :-------------------------: |
-| Easyget【简易抓包工具】 | [点击查看](/pages/easyget/) |
-|    快站短地址生成器     | [点击查看](/pages/easyget/) |
-| 公众号关注页面获取工具  | [点击查看](/pages/easyget/) |
+|                软件名称                 |          使用教程           |         类型         |
+| :-------------------------------------: | :-------------------------: | :------------------: |
+|         Easyget【简易抓包工具】         | [点击查看](/pages/easyget/) | <Badge text="免费"/> |
+|            快站短地址生成器             | [点击查看](/pages/easyget/) | <Badge text="免费"/> |
+|         公众号关注页面获取工具          | [点击查看](/pages/easyget/) | <Badge text="免费"/> |
+|    直播黑科技<br />【抖音OBS小助手】    | [点击查看](/pages/easyget/) | <Badge text="共享"/> |
+|  抖店黑科技<br />【卡首屏\|猜你喜欢】   | [点击查看](/pages/easyget/) | <Badge text="共享"/> |
+|    抖店无货源<br />【商品详情采集】     | [点击查看](/pages/easyget/) | <Badge text="共享"/> |
+| 抖店无货源<br />【PDD订单物流批量查询】 | [点击查看](/pages/easyget/) | <Badge text="共享"/> |
 
-### ✅共享软件<Badge text="共享"/>
 
-|                软件名称                 |          使用教程           |
-| :-------------------------------------: | :-------------------------: |
-|    直播黑科技<br />【抖音OBS小助手】    | [点击查看](/pages/easyget/) |
-|  抖店黑科技<br />【卡首屏\|猜你喜欢】   | [点击查看](/pages/easyget/) |
-|    抖店无货源<br />【商品详情采集】     | [点击查看](/pages/easyget/) |
-| 抖店无货源<br />【PDD订单物流批量查询】 | [点击查看](/pages/easyget/) |
 
 ## 💋赚钱|省钱项目
 
