deploy, heads/master-0-gd24b5b8

--- a/docs/00.引导页/02.支持作者/02.支持作者.md
+++ b/docs/00.引导页/02.支持作者/02.支持作者.md
@@ -27,6 +27,29 @@ article: false
 
 <img :src="$withBase('/img/qrcode/gzh.jpg')"  style="width:180px;" />
 
+## ⚡ 反馈与交流
+
+在使用过程中有任何问题和想法，请给我微信wechina008给我留言
+会定期把常见问题更新在本网站
+
+或者加入我们的交流群：
+
+<table>
+  <tbody>
+    <tr>
+      <td align="center" valign="middle">
+​       
+ <img :src="$withBase('/img/qrcode/wxq.png')" class="no-zoom" style="width:120px;margin: 10px;">
+        <p>easyget微信群(添加我微信备注"进群")</p>
+​      </td>
+​    </tr>
+  </tbody>
+</table>
+
+
+
+
+
 ## 致谢
 
 感谢给予支持的朋友，您的支持是我前进的动力 🎉
