deploy, heads/master-0-gec1a347

--- a/docs/01.精品软件/03.抖音obs推流码小助手.md
+++ b/docs/01.精品软件/03.抖音obs推流码小助手.md
@@ -50,6 +50,6 @@ title: 抖音obs推流码小助手
 
 ## 使用方法
 
-文字教程参照文字教程截图[软件截图/文字教程界面](../软件截图/文字教程界面)
+文字教程参照文字教程截图[软件截图/文字教程界面](../dyobs/#软件截图)
 
 视频教程：[https://b23.tv/ByBkuw](https://b23.tv/ByBkuw)
