deploy, heads/master-0-g99c2bc3

--- a/docs/01.精品软件/03.抖音obs推流码小助手.md
+++ b/docs/01.精品软件/03.抖音obs推流码小助手.md
@@ -14,6 +14,8 @@ title: 抖音obs推流码小助手
 
 网盘地址：[https://pandown.lanzout.com/itksv08fz3if](https://pandown.lanzout.com/itksv08fz3if)
 
+软件卡密获取:[点击获取](http://ucloud.goho.co/?cid=3&tid=3)
+
 ## 软件功能
 
 可以帮助到你获取直播时推流码地址
@@ -50,6 +52,9 @@ title: 抖音obs推流码小助手
 
 ## 使用方法
 
-文字教程参照文字教程截图[软件截图/文字教程界面](../dyobs/#软件截图)
+文字教程参照文字教程截图[软件截图/文字教程界面](../pages/dyobs/#软件截图)
 
 视频教程：[https://b23.tv/ByBkuw](https://b23.tv/ByBkuw)
+
+
+
