deploy, heads/master-0-g025eccb

--- a/docs/00.引导页/01.项目导航/01.项目导航.md
+++ b/docs/00.引导页/01.项目导航/01.项目导航.md
@@ -20,8 +20,8 @@ title: 项目导航
 |         Easyget【简易抓包工具】         | [点击查看](/pages/easyget/) | <Badge text="免费"/> |
 |            快站短地址生成器             | [点击查看](/pages/easyget/) | <Badge text="免费"/> |
 |         公众号关注页面获取工具          | [点击查看](/pages/easyget/) | <Badge text="免费"/> |
-|    直播黑科技<br />【抖音OBS小助手】    | [点击查看](/pages/easyget/) | <Badge text="共享"/> |
-|  抖店黑科技<br />【卡首屏\|猜你喜欢】   | [点击查看](/pages/easyget/) | <Badge text="共享"/> |
+|    直播黑科技<br />【抖音OBS小助手】    |  [点击查看](/pages/dyobs/)  | <Badge text="共享"/> |
+|  抖店黑科技<br />【卡首屏\|猜你喜欢】   |  [点击查看](/pages/dyhkj/)  | <Badge text="共享"/> |
 |    抖店无货源<br />【商品详情采集】     | [点击查看](/pages/easyget/) | <Badge text="共享"/> |
 | 抖店无货源<br />【PDD订单物流批量查询】 | [点击查看](/pages/easyget/) | <Badge text="共享"/> |
 
