--- a/docs/02.赚钱&省钱项目/03.抖音obs推流码小助手.md
+++ b/docs/02.赚钱&省钱项目/03.抖音obs推流码小助手.md
@@ -1,11 +1,11 @@
 ---
 date: 2022-07-27 16:01:30
-permalink: /pages/dyobs/
-categories: 
-  - 精品软件
-tags: 
-  - null
 title: 抖音obs推流码小助手
+permalink: /pages/004489/
+categories: 
+  - 赚钱&省钱项目
+tags: 
+  - 
 ---
 
 ## 软件下载
