--- a/docs/06.个人日记/03.抖音obs推流码小助手.md
+++ b/docs/06.个人日记/03.抖音obs推流码小助手.md
@@ -1,18 +1,18 @@
 ---
 date: 2022-07-27 16:01:30
-permalink: /pages/dyobs/
-categories: 
-  - 精品软件
-tags: 
-  - null
 title: 抖音obs推流码小助手
+permalink: /pages/9b3178/
+categories: 
+  - 个人日记
+tags: 
+  - 
 ---
 
 ## 软件下载
 
 更新地址：公众号互联网线报站回复 抖音
 
-网盘地址：[https://pandown.lanzout.com/iNKCT08m2wqb](https://pandown.lanzout.com/iNKCT08m2wqb)
+网盘地址：[https://pandown.lanzout.com/itksv08fz3if](https://pandown.lanzout.com/itksv08fz3if)
 
 软件卡密获取:[点击获取](http://ucloud.goho.co/?cid=3&tid=3)
 
