deploy, heads/master-0-g8678412

--- a/docs/00.引导页/01.项目导航/02.文章导航.md
+++ b/docs/00.引导页/01.项目导航/02.文章导航.md
@@ -1,29 +1,29 @@
 ---
 date: 2020-07-19 00:45:57
-permalink: /pages/update
+permalink: /pages/docs
 article: false
 title: 项目导航
 ---
 
-## 💋原创软件
+## 💋文章导航
 
 ::: tip
 
-软件使用前请查看使用教程|无法解决再联系微信wechina008
+日常文章导航，若有不妥请联系删除
 
 :::
 
 ### ✅软件列表
 
-|                软件名称                 |          使用教程           |         类型         |
-| :-------------------------------------: | :-------------------------: | :------------------: |
-|         Easyget【简易抓包工具】         | [点击查看](/pages/easyget/) | <Badge text="免费"/> |
-|            快站短地址生成器             | [点击查看](/pages/easyget/) | <Badge text="免费"/> |
-|         公众号关注页面获取工具          | [点击查看](/pages/easyget/) | <Badge text="免费"/> |
-|    直播黑科技<br />【抖音OBS小助手】    |  [点击查看](/pages/dyobs/)  | <Badge text="共享"/> |
-|  抖店黑科技<br />【卡首屏\|猜你喜欢】   |  [点击查看](/pages/dyhkj/)  | <Badge text="共享"/> |
-|    抖店无货源<br />【商品详情采集】     | [点击查看](/pages/easyget/) | <Badge text="共享"/> |
-| 抖店无货源<br />【PDD订单物流批量查询】 | [点击查看](/pages/easyget/) | <Badge text="共享"/> |
+|                软件名称                 |       介绍及下载地址        |
+| :-------------------------------------: | :-------------------------: |
+|         Easyget【简易抓包工具】         | [点击查看](/pages/easyget/) |
+|            快站短地址生成器             | [点击查看](/pages/easyget/) |
+|         公众号关注页面获取工具          | [点击查看](/pages/easyget/) |
+|    直播黑科技<br />【抖音OBS小助手】    |  [点击查看](/pages/dyobs/)  |
+|  抖店黑科技<br />【卡首屏\|猜你喜欢】   |  [点击查看](/pages/dyhkj/)  |
+|    抖店无货源<br />【商品详情采集】     | [点击查看](/pages/easyget/) |
+| 抖店无货源<br />【PDD订单物流批量查询】 | [点击查看](/pages/easyget/) |
 
 
 
