deploy, heads/master-0-g0501775

--- a/docs/00.引导页/01.项目导航/01.软件导航.md
+++ b/docs/00.引导页/01.项目导航/01.软件导航.md
@@ -1,11 +1,11 @@
 ---
 date: 2020-07-19 00:45:57
-permalink: /pages/soft
+permalink: /pages/update
 article: false
-title: 项目导航
+title: 软件导航
 ---
 
-## 💋软件导航
+# 💋软件导航
 
 ::: tip
 
@@ -17,7 +17,7 @@ title: 项目导航
 
 :::
 
-### ✅软件列表
+## ✅软件列表
 
 | 序号 |        软件名称        |         教程及下载          |
 | :--: | :--------------------: | :-------------------------: |
@@ -38,5 +38,53 @@ title: 项目导航
 |      |                        |                             |
 |      |                        |                             |
 
+# 🧡文章导航
 
+## ✅文章列表
+
+### ☢个人学习记录分享
+
+| 序号 | 文章标题 | 文章链接 |
+| ---- | -------- | -------- |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
+| 0003 |          |          |
+| 0001 |          |          |
+| 0002 |          |          |
 
