--- a/docs/01.精品软件/01.easyget简易抓包软件.md
+++ b/docs/01.精品软件/01.easyget简易抓包软件.md
@@ -1,7 +1,7 @@
 ---
 title: easyget简易抓包软件
 date: 2020-07-19 00:45:57
-permalink: /pages/eayget
+permalink: /pages/easyget
 categories: 
   - 精品软件
 tags: 
