deploy, heads/master-0-g1da1206

--- a/docs/00.引导页/01.项目导航/02.文章导航.md
+++ b/docs/00.引导页/01.项目导航/02.文章导航.md
@@ -2,21 +2,22 @@
 date: 2020-07-19 00:45:57
 permalink: /pages/update
 article: false
+title: 文章导航
 ---
 
-# 💋软件导航
+# 💋文章导航
 
 ::: tip
 
-软件使用前请查看使用教程|站长微信wechina008
+站长微信wechina008
 
 顶部可以进行关键字搜索|可付费代找软件
 
-软件皆为网络收集若侵权请联系删除
+软件大部分为网络收集若侵权请联系删除
 
 :::
 
-## ✅软件列表
+## ✅文章列表
 
 | 序号 |        软件名称        |         教程及下载          |
 | :--: | :--------------------: | :-------------------------: |
