deploy, heads/master-0-gddd4a73

--- a/docs/00.引导页/01.项目导航/01.软件导航.md
+++ b/docs/00.引导页/01.项目导航/01.软件导航.md
@@ -26,13 +26,13 @@ title: 软件导航
 | 0003 | 公众号关注页面获取工具 | [点击查看](/pages/easyget/) |
 | 0004 |   直播OBS推流码助手    |  [点击查看](/pages/dyobs/)  |
 | 0005 |    卡首屏\|猜你喜欢    |  [点击查看](/pages/dyhkj/)  |
-| 0006 |    抖店商品详情采集    | [点击查看](/pages/easyget/) |
-| 0007 |       抖店无货源       | [点击查看](/pages/easyget/) |
+| 0006 |    抖店商品详情采集    |
+| 0007 |       抖店无货源       |
 | 0008 |        远程工具        | [点击查看](/pages/easyget/) |
 | 0009 |     数据库管理软件     | [点击查看](/pages/easyget/) |
-| 0010 |      FTP管理软件       |                             |
-| 0011 |       易语言5.9        |                             |
-|      |                        |                             |
+| 0010 |      FTP管理软件       | [点击查看](/pages/easyget/) |
+| 0011 |       易语言5.9        | [点击查看](/pages/easyget/) |
+| 0012 |      远程协助软件      | [点击查看](/pages/easyget/) |
 |      |                        |                             |
 |      |                        |                             |
 |      |                        |                             |
