--- a/docs/03.网络资源/01.香港永久免备案主机.md
+++ b/docs/03.网络资源/01.香港永久免备案主机.md
@@ -10,7 +10,7 @@ tags:
 
 高防空间与香港空间重点区别：
 
-香港空间对搭建内容有明确规定，购买前务必点击查看[香港普通空间注意事项](/pages/3vhost/#香港普通空间注意事项)、[香港高防空间注意事项](/pages/3vhost/#高防空间注意事项)
+香港空间对搭建内容有明确规定，购买前务必点击查看[香港空间注意事项](/pages/3vhost/#香港普通空间注意事项)、[香港高防空间注意事项](/pages/3vhost/#高防空间注意事项)
 
 ## 注册地址：
 
