--- a/docs/00.引导页/01.项目导航/01.软件导航.md
+++ b/docs/00.引导页/01.项目导航/01.软件导航.md
@@ -30,7 +30,7 @@ title: 软件导航
 | 0007 |       抖店无货源       | [点击查看](/pages/easyget/) |
 | 0008 |        远程工具        | [点击查看](/pages/easyget/) |
 | 0009 |     数据库管理软件     | [点击查看](/pages/easyget/) |
-| 0010 |      FTP管理软件       |                             |
+| 0010 |      FTP管理软件       |              1              |
 | 0011 |       易语言5.9        |                             |
 |      |                        |                             |
 |      |                        |                             |
