deploy, heads/master-2-gfb7d601

--- a/docs/00.引导页/01.项目导航/02.文章导航.md
+++ b/docs/00.引导页/01.项目导航/02.文章导航.md
@@ -2,7 +2,7 @@
 date: 2020-07-19 00:45:57
 permalink: /pages/docs
 article: false
-title: 软件导航
+title: 文章导航
 ---
 
 # 💋文章导航
@@ -15,21 +15,21 @@ title: 软件导航
 
 :::
 
-## ✅软件列表
+## ✅个人记录
 
-| 序号 |        软件名称        |         教程及下载          |
-| :--: | :--------------------: | :-------------------------: |
-| 0001 |     Easyget工具包      | [点击查看](/pages/easyget/) |
-| 0002 |    快站短地址生成器    | [点击查看](/pages/easyget/) |
-| 0003 | 公众号关注页面获取工具 | [点击查看](/pages/easyget/) |
-| 0004 |   直播OBS推流码助手    |  [点击查看](/pages/dyobs/)  |
-| 0005 |    卡首屏\|猜你喜欢    |  [点击查看](/pages/dyhkj/)  |
-| 0006 |    抖店商品详情采集    ||
-| 0007 |       抖店无货源       ||
-| 0008 |        远程工具        | [点击查看](/pages/easyget/) |
-| 0009 |     数据库管理软件     | [点击查看](/pages/easyget/) |
-| 0010 |      FTP管理软件       |              1              |
-| 0011 |       易语言5.9        |                             |
-| 0010 |      FTP管理软件       | [点击查看](/pages/easyget/) |
-| 0011 |       易语言5.9        | [点击查看](/pages/easyget/) |
-| 0012 |      远程协助软件      | [点击查看](/pages/easyget/) |
+| 序号 |        文章标题（点击进入）        |
+| :--: | :--------------------: |
+| 0001 | [Google网页翻译替代品](/pages/fanyi/) |
+| 0002 | [永久备案域名\|成本54元](https://mp.weixin.qq.com/s/6qqk0YBvsVJMVbnc-b3_Rw) |
+| 0003 | [永久无限邮箱【靠谱大平台】](https://mp.weixin.qq.com/s/6qqk0YBvsVJMVbnc-b3_Rw) |
+| 0004 | 永久免费域名注册 |
+| 0005 | [永久香港虚拟主机\|老平台\|成本90元起](/pages/3vhost/) |
+|      |                      |
+|      |                      |
+|      |                      |
+|      |                      |
+|      |                      |
+|      |                      |
+|      |                      |
+|      |                      |
+|      |                      |
