--- a/docs/00.引导页/03.特别推荐/01.香港永久免备案主机.md
+++ b/docs/00.引导页/03.特别推荐/01.香港永久免备案主机.md
@@ -10,11 +10,11 @@ tags:
 
 高防空间与香港空间重点区别：
 
-香港空间对搭建内容有明确规定，购买前务必点击查看[香港空间注意事项](/pages/3vhost/#香港普通空间注意事项)、[香港高防空间注意事项](/pages/3vhost/#高防空间注意事项)
+香港空间对搭建内容有明确规定，购买前务必点击查看[香港空间注意事项](/pages/3vhost/#香港空间注意事项)、[香港高防空间注意事项](/pages/3vhost/#高防空间注意事项)
 
 ## 注册地址：
 
-[http://admin.hsk.top/host/login.html](http://admin.hsk.top/host/login.html)
+[点击此处注册可以联系微信wechina00返款10%](https://xiaoh2018.3v.do/)
 
 # 免备案永久虚拟主机
 
@@ -105,55 +105,55 @@ tags:
 
 ## 香港免备案空间配置
 
-| 空间容量         | 1 GB                                                    | 2 GB                                                    | 3 GB                                                    | 5 GB                                                    |
-| ---------------- | ------------------------------------------------------- | ------------------------------------------------------- | ------------------------------------------------------- | ------------------------------------------------------- |
-| MYSQL            | 100M                                                    | 200M                                                    | 300M                                                    | 500M                                                    |
-| MSSQL            | 100M                                                    | 200M                                                    | 300M                                                    | 500M                                                    |
-| ACCESS           | 不限                                                    | 不限                                                    | 不限                                                    | 不限                                                    |
-| 赠送二级域名     | 无                                                      | 无                                                      | 无                                                      | 无                                                      |
-| CPU峰值          | 10%                                                     | 20%                                                     | 30%                                                     | 40%                                                     |
-| 网站带宽         | 100M共享                                                | 100M共享                                                | 100M共享                                                | 100M共享                                                |
-| IIS链接数        | 不限                                                    | 不限                                                    | 不限                                                    | 不限                                                    |
-| 流量GB/月        | 不限                                                    | 不限                                                    | 不限                                                    | 不限                                                    |
-| 应用程序池       | 共享                                                    | 共享                                                    | 共享                                                    | **独立**                                                |
-| 域名绑定         | 2个                                                     | 4个                                                     | 6个                                                     | 8个                                                     |
-| 支持脚本以及程序 |                                                         |                                                         |                                                         |                                                         |
-| HTML             | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| ASP              | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| PHP(5.2-7.4)     | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| PHP(8.0-8.1)     | ![img](http://www.3v.do/images/cuo.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| PHP版本切换      | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| .NET(2.0-4.0)    | ![img](http://www.3v.do/images/cuo.png)                 | ![img](http://www.3v.do/images/cuo.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| .NET版本切换     | ![img](http://www.3v.do/images/cuo.png)                 | ![img](http://www.3v.do/images/cuo.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| WAP              | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 论坛BBS          | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| ZIP,RAR下载      | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| SWF、MP3         | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| JMail.SmtpMail   | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| ASPUPLOAD        | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| ASPJPEG          | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 301重定向        | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| SSL证书          | ![img](http://www.3v.do/images/cuo.png)                 | ![img](http://www.3v.do/images/cuo.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| Rewrite伪静态    | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| Fsockopen        | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| GZIP压缩         | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 智能控制面板展示 |                                                         |                                                         |                                                         |                                                         |
-| 在线绑定域名     | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 空间使用情况     | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 修改FTP密码      | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 自定义默认首页   | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 设置安全读写权限 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 自定义MIME类型   | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 在线打包、解压   | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 网站搬家         | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 数据库备份还原   | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 404错误自定义    | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 | ![img](http://www.3v.do/images/dui.png)                 |
-| 在线购买：       | [购买](http://www.3v.do/manager/hostshop.asp?hostid=44) | [购买](http://www.3v.do/manager/hostshop.asp?hostid=45) | [购买](http://www.3v.do/manager/hostshop.asp?hostid=46) | [购买](http://www.3v.do/manager/hostshop.asp?hostid=47) |
+| 空间容量         | 1 GB                                    | 2 GB                                    | 3 GB                                    | 5 GB                                    |
+| ---------------- | --------------------------------------- | --------------------------------------- | --------------------------------------- | --------------------------------------- |
+| MYSQL            | 100M                                    | 200M                                    | 300M                                    | 500M                                    |
+| MSSQL            | 100M                                    | 200M                                    | 300M                                    | 500M                                    |
+| ACCESS           | 不限                                    | 不限                                    | 不限                                    | 不限                                    |
+| 赠送二级域名     | 无                                      | 无                                      | 无                                      | 无                                      |
+| CPU峰值          | 10%                                     | 20%                                     | 30%                                     | 40%                                     |
+| 网站带宽         | 100M共享                                | 100M共享                                | 100M共享                                | 100M共享                                |
+| IIS链接数        | 不限                                    | 不限                                    | 不限                                    | 不限                                    |
+| 流量GB/月        | 不限                                    | 不限                                    | 不限                                    | 不限                                    |
+| 应用程序池       | 共享                                    | 共享                                    | 共享                                    | **独立**                                |
+| 域名绑定         | 2个                                     | 4个                                     | 6个                                     | 8个                                     |
+| 支持脚本以及程序 |                                         |                                         |                                         |                                         |
+| HTML             | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| ASP              | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| PHP(5.2-7.4)     | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| PHP(8.0-8.1)     | ![img](http://www.3v.do/images/cuo.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| PHP版本切换      | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| .NET(2.0-4.0)    | ![img](http://www.3v.do/images/cuo.png) | ![img](http://www.3v.do/images/cuo.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| .NET版本切换     | ![img](http://www.3v.do/images/cuo.png) | ![img](http://www.3v.do/images/cuo.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| WAP              | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 论坛BBS          | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| ZIP,RAR下载      | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| SWF、MP3         | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| JMail.SmtpMail   | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| ASPUPLOAD        | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| ASPJPEG          | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 301重定向        | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| SSL证书          | ![img](http://www.3v.do/images/cuo.png) | ![img](http://www.3v.do/images/cuo.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| Rewrite伪静态    | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| Fsockopen        | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| GZIP压缩         | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 智能控制面板展示 |                                         |                                         |                                         |                                         |
+| 在线绑定域名     | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 空间使用情况     | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 修改FTP密码      | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 自定义默认首页   | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 设置安全读写权限 | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 自定义MIME类型   | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 在线打包、解压   | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 网站搬家         | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 数据库备份还原   | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 404错误自定义    | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) | ![img](http://www.3v.do/images/dui.png) |
+| 在线购买：       | [购买](https://xiaoh2018.3v.do/)        | [购买](https://xiaoh2018.3v.do/)        | [购买](https://xiaoh2018.3v.do/)        | [购买](https://xiaoh2018.3v.do/)        |
 
 ## 香港空间注意事项
 
 一、香港空间优势：香港空间配置高端，速度快，稳定好，堪比国内双线空间，无需备案，支持各种ASP+ACCESS或MSSQL、PHP+MYSQL网站，特别适合中小型企业网站，普通个人网站及对速度要求高的网站选用！
 
-二、此处香港空间仅可做正规的个人或企业网站，另外如果您的网站需要防范网络攻击，可以购买我们的[香港高防空间](/pages/3vhost/#香港高防空间配置)，香港高防空间，可以防御各种DDOS/CC攻击，安全，稳定，可靠！
+二、此处香港空间仅可做正规的个人或企业网站，另外如果您的网站需要防范网络攻击，可以购买我们的[香港高防空间](/pages/3vhost/#香港高防空间配置)，香港高防空间可以防御各种DDOS/CC攻击，安全，稳定，可靠！
 
 三、特别声明：我公司香港空间均禁止游戏，私服、外挂、木马、病毒、色情、诈骗、彩票、钓鱼网站、网络验证、秒赞、黑客安全等易受攻击或产生版权纠纷影响网络稳定的网站。 我司有严格的监控措施，一经发现，立即永久关闭，并不退款！ 注：空间赠送的MYSQL和MSSQL数量为一个，可根据需要选择一个类型开通，如需更多数据库，可在后台单独购买！`
