deploy, heads/master-3-g0c7bff3

--- a/docs/00.引导页/01.项目导航/02.文章导航.md
+++ b/docs/00.引导页/01.项目导航/02.文章导航.md
@@ -24,7 +24,7 @@ title: 文章导航
 | 0003 | [永久无限邮箱【靠谱大平台】](https://mp.weixin.qq.com/s/6qqk0YBvsVJMVbnc-b3_Rw) |
 | 0004 | 永久免费域名注册 |
 | 0005 | [永久香港虚拟主机\|老平台\|成本90元起](/pages/3vhost/) |
-|      |                      |
+| 0006 | [iis虚拟主机如何支持多个域名绑定不同目录](/pages/webconfig/) |
 |      |                      |
 |      |                      |
 |      |                      |
