--- a/docs/04.个人学习记录/01.Google网页翻译替代品.md
+++ b/docs/04.个人学习记录/01.Google网页翻译替代品.md
@@ -1,11 +1,12 @@
 ---
 date: 2022-07-27 16:01:30
-title: Google网页翻译替代品【找了几款比较好用的】做个记录
+title: Google网页翻译替代品
 permalink: /pages/fanyi/
 categories: 
   - 学习记录
 tags: 
   - 翻译工具
+
 ---
 
 ### **第一款：腾讯交互翻译**
