--- a/docs/04.个人学习记录/02.iis虚拟主机如何支持多个域名绑定不同目录.md
+++ b/docs/04.个人学习记录/02.iis虚拟主机如何支持多个域名绑定不同目录.md
@@ -1,13 +1,11 @@
 ---
 date: 2022-07-27 16:01:30
-title: iis虚拟主机如何支持多个域名绑定不同目录
+title: iis虚拟主机多个域名绑定不同目录
 permalink: /pages/webconfig/
 categories: 
   - 学习记录
 tags: 
   - 虚拟主机
-
-
 ---
 
 ### 🧡webconfig配置
@@ -34,7 +32,7 @@ tags:
  </configuration>
 ```
 
-🧡php控制
+### 🧡php控制
 
 ```html
 
